NEW BIRTHDAY CHECKER/BASIC FUNCTIONALITY/WORK ON IT!!

--- a/pyhton/templates/isitstanbd.html
+++ b/pyhton/templates/isitstanbd.html
@@ -5,7 +5,6 @@
 <body>
   <section>
     <h1 style = "text-align:center;"> Is it Stanisalv's BD?</h1>
-    <h3 style = "text-align:center;"> {{ stanbd }} </h3>
+    <h3 style = "text-align:center; color:red;"> {{ stanbd }} </h3>
   </section>
   </body>
-  
